<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/uilib_shape_picker_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:text="@string/uilib_share_to"
        android:textColor="@color/text_black"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/ll_share_to_moment"
            android:layout_width="0dp"
            android:layout_height="82dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:src="@drawable/module_uilib_label_logo_pyq"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/uilib_share_to_moment"
                android:textColor="@color/text_black"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share_to_wechat"
            android:layout_width="0dp"
            android:layout_height="82dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:src="@drawable/module_uilib_label_logo_weixin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/uilib_share_to_wechat"
                android:textColor="@color/text_black"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share_to_qq"
            android:layout_width="0dp"
            android:layout_height="82dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:src="@drawable/module_uilib_label_logo_qq"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/uilib_share_to_qq"
                android:textColor="@color/text_black"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share_to_weibo"
            android:layout_width="0dp"
            android:layout_height="82dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:src="@drawable/module_uilib_label_logo_weibo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/uilib_share_to_weibo"
                android:textColor="@color/text_black"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="29dp"
        android:background="@color/line"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/uilib_cancel"
        android:textColor="@color/global_blue"
        android:textSize="18sp"/>
</LinearLayout>