<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/cl_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:src="@drawable/module_uilib_icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/text_black"
        android:textStyle="bold"
        android:text="@string/comresourcelib_album"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_back"
        app:layout_constraintBottom_toBottomOf="@id/iv_back"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/text_black"
        android:layout_marginEnd="20dp"
        android:text="@string/comresourcelib_album_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_back"
        app:layout_constraintBottom_toBottomOf="@id/iv_back"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_bottom"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/text_black"
            android:layout_marginStart="20dp"
            android:text="@string/comresourcelib_album_preview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_complete"
            android:layout_width="77dp"
            android:layout_height="32dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            android:background="@drawable/background_global_blue_full"
            android:text="@string/comresourcelib_album_complete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_album"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cl_bottom"
        app:layout_constraintTop_toBottomOf="@id/iv_back"
        tools:layoutManager="GridLayoutManager"
        tools:spanCount="4"
        tools:listitem="@layout/comresourcelib_item_album_picture"
        tools:itemCount="30"/>


</android.support.constraint.ConstraintLayout>